[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sre-incident-env"
version = "1.0.0"
description = "SRE Incident Response OpenEnv Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0",
    "requests",
    "openai",
]

[project.scripts]
server = "server.app:main"